--- a/sass/page/_left_block.scss
+++ b/sass/page/_left_block.scss
@@ -18,7 +18,7 @@
         padding: .5em;
         text-align: center;
         color: #fff;
-        background-color: #666;
+        background-color: #999;
         font-size: 1.25em;
     }
     ul {
@@ -44,6 +44,37 @@
             a {
                 display: block;
                 padding: 5px 0;
+                line-height: 1.4em;
+                font-size: .938em;
+                color: #333;
+                &:hover {
+                    color: $aHover;
+                }
+            }
+        }
+    }
+}
+.leftblock_nodemenu {
+    padding: 0 0 20px 0;
+    h2 {
+        margin: 0 0 1em;
+        padding: .5em;
+        text-align: center;
+        color: #fff;
+        background-color: #999;
+        font-size: 1.25em;
+    }
+    ul {
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+        li {
+            margin: 0 0 5px;
+            padding: 0 0 5px;
+            border-bottom: 1px solid #ccc;
+            a {
+                display: block;
+                padding: 10px 0;
                 line-height: 1.4em;
                 font-size: .938em;
                 color: #333;
