--- a/sass/sass/_header.scss
+++ b/sass/sass/_header.scss
@@ -7,6 +7,7 @@
     z-index: 1030;
     background: #fff;
     box-shadow: 0px 2px 5px RGBA(0, 0, 0, .3);
+    transition: .5s;
     // 虛擬底色 - navigation bg
     // &:before {
     //     content: "";
@@ -293,3 +294,4 @@
         }
     }
 }
+
