--- a/sass/sass/_slick.scss
+++ b/sass/sass/_slick.scss
@@ -185,6 +185,80 @@
         }
     }
 }
+// 
+//  slick燈箱
+.lightbox_slider_block {
+    h3 {
+        font-size: 1.5em;
+        padding: 12px 0px 15px 0px;
+        margin: 0.5em 0px 1.2em;
+        border-bottom: 1px solid $primaryColor;
+    }
+    background: #fff;
+    padding: 1em 0;
+    clear: both;
+    .cppic_slider{
+        @include gutter;
+
+    }
+    .img-container {
+        margin: 0px 15px;
+        @include aspect-ratio(4, 3);
+        overflow: hidden;
+        img {
+            object-fit: contain;
+        }
+    }
+    .caption {
+        padding: .5em !important;
+        position: absolute;
+        background: rgba(0, 0, 0, .75) !important;
+        color: #FFF;
+        bottom: -2em !important;
+        left: 0;
+        font-size: .938em !important;
+        height: 2em !important;
+        line-height: 1 !important;
+        width: 100%;
+        @include text-overflow;
+        transition: .3s ease-out;
+    }
+    // dots
+    .slick-dots {
+        bottom: -30px !important;
+        @include screen('mobile') {
+            bottom: -40px !important;
+            padding: 0;
+        }
+        li {
+            width: 10px;
+            height: 10px;
+            margin: 0 10px;
+        }
+    }
+    //Arrows
+    .slick-prev {
+        left: -1 * $grid-gutter-width/2;
+    }
+    .slick-next {
+        right: -1 * $grid-gutter-width/2;
+    }
+    a {
+        color: #555;
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        &:hover,
+        &:focus {
+            .caption {
+                bottom: 0 !important;
+            }
+        }
+    }
+}
 /*  slick-lightbox  */
 .slick-lightbox {
     position: fixed;
