--- a/sass/sass/mixins/_flex-set.scss
+++ b/sass/sass/mixins/_flex-set.scss
@@ -9,7 +9,12 @@
   max-width: calc(100% / #{$col} - #{$m-gutter});
   padding: 0 calc(#{$p-gutter}/2);
 
-  @if $col == 2 {
+  @if $col == 1 {
+    &:last-child{
+      &:nth-child(3n-1), &:nth-child(3n-2),
+      &:nth-child(4n-1), &:nth-child(4n-2){ margin-right: 0; }
+    }
+  } @else if $col == 2 {
     &:last-child{                     
       &:nth-child(2n),
       &:nth-child(3n-1),
