2020-0928 _flex-set 調整

--- a/sass/sass/_grid.scss
+++ b/sass/sass/_grid.scss
@@ -1,4 +1,5 @@
 /////////////////////////////////////////////////////////以下為demo範例///
+.aaa{ color: #222; }
 // 首頁區塊設定
 .demosection {
     padding: 0em 0 3em;
@@ -233,6 +234,7 @@
 
 // step 2、子層設定欄寬
 // A - 均分（ equal ＝ 均等）
+
 .flex-equal-2{
     .Flex-set{
         // 方向、是否斷點
