--- a/sass/sass/_notice.scss
+++ b/sass/sass/_notice.scss
@@ -2,6 +2,7 @@
 *[class^="notice"] {
     padding: .4em 2.5em;
     display: block;
+    width: 100%;
     font-size: .938em;
     margin: .2em 0;
     position: relative;
