--- a/sass/sass/_header.scss
+++ b/sass/sass/_header.scss
@@ -180,8 +180,9 @@
     }
     .form_grp {
         flex:0 0 auto;
+        margin:0;
         input {
-            margin: 0;
+            margin: 0 0 0 .5em;
             padding: .2em;
             box-shadow: none;
             width:auto;
