--- a/sass/sass/_element.scss
+++ b/sass/sass/_element.scss
@@ -137,6 +137,29 @@ img.img-responsive {
     }
 }
 
+//元素對齊 align
+.align-left{
+    text-align: left;
+}
+.align-center{
+    text-align: center;
+}
+.align-right{
+    text-align: right;
+}
+.align-top{
+    vertical-align: top;
+}
+.align-middle{
+    vertical-align: middle;
+}
+.align-bottom{
+    vertical-align: bottom;
+}
+.align-baseline{
+    vertical-align: baseline;
+}
+
 
 
 
