--- a/sass/sass/_fatfooter.scss
+++ b/sass/sass/_fatfooter.scss
@@ -94,7 +94,7 @@
                         width: auto;
                     }
                     li {
-                        display: 0 0 100%;
+                        flex: 0 0 100%;
                         a {
                             display: block;
                             @include aSetting_nocolor;
