--- a/sass/sass/_table.scss
+++ b/sass/sass/_table.scss
@@ -6,11 +6,11 @@ table {
         width: 100%;
     }
     th,
-    td {
+    td:not(.gsib_b,.gsc-search-button) {
         padding: .5em;
         text-align: left;
     }
-    td {
+    td:not(.gsib_a,.gsc-search-button){
         border: #ddd 1px solid;
         word-break: break-all;
         a {
