--- a/sass/hyui.scss
+++ b/sass/hyui.scss
@@ -38,15 +38,15 @@
 @import "sass/_lightbox";				//燈箱
 @import "sass/_share";					//社群分享
 @import "sass/_tag";					//文章標籤
-@import "sass/_fontsize";			//控制文章字體大小
+@import "sass/_fontsize";				//控制文章字體大小
 @import "sass/_notice";					//提示
-@import "sass/_function_panel";	//內頁功能面板
+@import "sass/_function_panel";			//內頁功能面板
 
 // 頁面
 @import "page/_template";				//版型初始設定
 @import "page/_mp";						//首頁
 @import "page/_lp";			  	        //LP
-@import "page/_np";				//NP
+@import "page/_np";						//NP
 @import "page/_cp";						//CP
 @import "page/_fp";						//Forward
 @import "page/_qp";						//QP
@@ -55,6 +55,8 @@
 
 // 外掛
 @import "sass/_slick";					//slick
+
+@import "sass/_gs_fix";	        		//google search 修正
 
 // 無障礙
 @import "sass/_nojs";					//無障礙關閉js設定
